enhance list with files items

--- a/public/css/less/formfields/field-list.less
+++ b/public/css/less/formfields/field-list.less
@@ -1,4 +1,7 @@
 .sharp-field-list {
-  .sharp-list-remove { padding:6px 0; }
-  .sharp-list-add { display: block; }
+  .sharp-list {
+    margin-bottom: 0;
+    .sharp-list-remove { padding:6px 0; }
+    .sharp-list-add { display: block; }
+  }
 }
