--- a/public/css/less/formfields/field-markdown.less
+++ b/public/css/less/formfields/field-markdown.less
@@ -337,6 +337,7 @@
 
   .editor-statusbar { display: none; }
   .cm-s-paper { border:1px solid #ddd; }
+  &.has-error .cm-s-paper { border-color:#A94442; }
   .editor-toolbar:before, .editor-toolbar:after { background: none; margin:0; }
   .CodeMirror { height: 250px; background: #fff; }
 
