list css + manage date in item creation

--- a/public/css/less/formfields/field-list.less
+++ b/public/css/less/formfields/field-list.less
@@ -1,7 +1,11 @@
 .sharp-field-list {
   .sharp-list {
     margin-bottom: 0;
-    .sharp-list-remove { padding:6px 0; }
+    .sharp-list-item {
+      padding: 5px;
+      .form-group { margin-bottom: 8px; }
+      .sharp-list-remove { padding:6px 0; }
+    }
     .sharp-list-add { display: block; }
   }
 }
