list css tweaks

--- a/public/css/less/formfields/field-list.less
+++ b/public/css/less/formfields/field-list.less
@@ -6,9 +6,9 @@
       .form-group { margin-bottom: 8px; }
       .sharp-list-remove { padding:6px 0; }
     }
-    .sharp-list-item-add {
+    .sharp-list-item-add:not(:first-child) {
       background: none; border:none;
-      .sharp-list-add { display: block; }
     }
+    .sharp-list-item-add .sharp-list-add { display: block; }
   }
 }
