add selectize.js to ref field

--- a/public/css/less/main.less
+++ b/public/css/less/main.less
@@ -35,3 +35,4 @@ body.sharp-auth {
 @import "formfields/field-file.less";
 @import "formfields/field-list.less";
 @import "formfields/field-date.less";
+@import "formfields/field-ref.less";
