tweak css field list

--- a/public/css/less/formfields/field-list.less
+++ b/public/css/less/formfields/field-list.less
@@ -4,7 +4,7 @@
     .sharp-list-item {
       padding: 5px;
       .form-group { margin-bottom: 8px; }
-      .sharp-list-remove { padding:6px 0; }
+      .sharp-list-remove { padding:0; float: right; }
     }
     .sharp-list-item-add:not(:first-child) {
       background: none; border:none;
