add col-md-X for non-list fields

--- a/public/css/less/formview.less
+++ b/public/css/less/formview.less
@@ -3,6 +3,7 @@ body.sharp-form {
     margin-top:@grid-gutter-width/2;
     form {
       label.control-label { font-weight: normal; font-size: 18px; color:#666 }
+      .help-block { color:#ACB2B7; font-style: italic; }
     }
 
     #sharpdelete {
