--- a/public/css/less/formview.less
+++ b/public/css/less/formview.less
@@ -4,6 +4,7 @@ body.sharp-form {
     form {
       label.control-label { font-weight: normal; font-size: 18px; color:#666 }
       .form-group:not(.has-error) .help-block { color:#ACB2B7; font-style: italic; }
+      textarea { overflow: auto; resize: none; }
     }
 
     #sharpdelete {
