--- a/public/css/less/formfields/field-ref.less
+++ b/public/css/less/formfields/field-ref.less
@@ -1,4 +1,4 @@
 @import "../../../bower_components/selectize/dist/less/selectize.bootstrap3";
 
 // Fix display (otherwise could create float problem with field_width)
-.selectize-input { display: block !important; }
+#sharpform .selectize-input { display: block !important; }
