--- a/public/css/less/formview.less
+++ b/public/css/less/formview.less
@@ -1,7 +1,15 @@
 body.sharp-form {
   #maincontent #page {
     margin-top:@grid-gutter-width/2;
+
+    .nav-pills {
+      margin-bottom: @grid-gutter-width;
+      li a { background: #ddd; color:#999; }
+      li.active a { border-bottom-color: @sharp-contexbar-bg; color:#fff; background:@sharp-contexbar-bg; }
+    }
+
     form {
+      .clearfix();
       label.control-label { font-weight: normal; font-size: 18px; color:#666 }
       .form-group:not(.has-error) .help-block { color:#ACB2B7; font-style: italic; }
       textarea { overflow: auto; resize: none; }
