--- a/public/css/less/formfields/field-list.less
+++ b/public/css/less/formfields/field-list.less
@@ -1,4 +1,5 @@
 .sharp-field-list {
+
   .sharp-list {
     margin-bottom: 0;
     .sharp-list-item {
@@ -11,4 +12,6 @@
     }
     .sharp-list-item-add .sharp-list-add { display: block; }
   }
+
+  &.has-error .sharp-list { border:1px solid @state-danger-bg !important; }
 }
