--- a/public/css/less/formview.less
+++ b/public/css/less/formview.less
@@ -4,7 +4,7 @@ body.sharp-form {
 
     .nav-pills {
       margin-bottom: @grid-gutter-width;
-      li a { background: #ddd; color:#999; border-right: 1px solid #b7b7b7; }
+      li a { background: #ddd; color:#999; border-right: 1px solid #cecece; }
       li:last-child a { border:none; }
       li.active a { border-bottom-color: @sharp-contexbar-bg; color:#fff; background:@sharp-contexbar-bg; border:none; }
     }
