--- a/public/css/less/navcol.less
+++ b/public/css/less/navcol.less
@@ -1,9 +1,8 @@
 #mainrow  {
-//  background: @sharp-navcol-bg;
   #navcol {
     margin-top:@grid-gutter-width/2; padding-bottom: 50px;
     .nav-pills {
-      font-weight: 100;
+      font-weight: normal;
       li {
         text-align: center; font-size: 16px; margin-bottom: @grid-gutter-width/2;
         i { font-size: 40px; display: block; margin-bottom: 6px; }
