--- a/public/css/less/contextbar.less
+++ b/public/css/less/contextbar.less
@@ -4,7 +4,7 @@
     margin-bottom: 0;
     .navbar-nav {
       float: none;
-      p.navbar-text { margin-left:0; font-size: 18px; color:#fff; line-height: normal; font-weight: 100; }
+      p.navbar-text { margin-left:0; font-size: 18px; color:#fff; line-height: normal; font-weight: normal; }
       .navbar-btn {
         font-size: 18px; line-height:normal; color:#fff; margin: 0; padding-top:14px; padding-bottom: 14px; border-left:1px solid #fff; background: transparent;
         &:active { background: darken(@sharp-contexbar-bg, 10%); }
