--- a/public/css/less/header.less
+++ b/public/css/less/header.less
@@ -1,9 +1,9 @@
 #sharp header {
-  background-color: @sharp-navbar-bg; padding:@grid-gutter-width/2 0; font-weight: 100;
+  background-color: @sharp-navbar-bg; padding:@grid-gutter-width/2 0; font-weight: normal;
   .navbar {
     margin: 0;
     li {
-      &.site a { font-weight: bold; color:#fff; }
+      &.site a { font-weight: 100; color:#fff; }
       a { font-size: 36px; color:lighten(@sharp-navbar-bg, 15%); }
       a:hover, &.active a { color:#fff; background: none; }
     }
