ui update for Chrome

--- a/public/css/less/contextbar.less
+++ b/public/css/less/contextbar.less
@@ -11,10 +11,8 @@
       }
       .navbar-form { margin-right: 0; }
       #search {
-        input {
-          border:none; box-shadow: none; background: #fff;
-          &[type=text] { width: 150px; }
-        }
+        max-width: 215px;
+        input { border:none; box-shadow: none; background: #fff; }
         .btn { color:#ccc; background: #fff; }
       }
       .dropdown {
