add codeception + ui fixes

--- a/public/css/less/header.less
+++ b/public/css/less/header.less
@@ -5,7 +5,7 @@
     li {
       &.site a { font-weight: 100; color:#fff; }
       a { font-size: 36px; color:lighten(@sharp-navbar-bg, 15%); }
-      a:hover, &.active a { color:#fff; background: none; }
+      a:hover, &.active a, a:focus { color:#fff; background: none; }
     }
 
     .user {
