--- a/public/css/less/navcol.less
+++ b/public/css/less/navcol.less
@@ -6,7 +6,7 @@
       li {
         text-align: center; font-size: 16px; margin-bottom: @grid-gutter-width/2;
         i { font-size: 40px; display: block; margin-bottom: 6px; }
-        a:hover, &.active a { background: none; }
+        a:hover, &.active a, a:focus { background: none; }
       }
     }
   }
