Add Command (list and entity) functionality

--- a/public/css/less/listview.less
+++ b/public/css/less/listview.less
@@ -22,7 +22,7 @@ body.sharp-list {
           &:not(.inactive) td.entity-data { cursor: pointer; }
           td.actions {
             text-align: right;
-            .btn { padding: 0 5px; font-size: 22px; }
+            .btn { padding: 0 5px; font-size: 22px; background: transparent; color:gray; }
             .state {
               &.state-active {
                 .btn { color:@brand-info; }
