css tweaks of navcol

--- a/public/css/less/contextbar.less
+++ b/public/css/less/contextbar.less
@@ -1,5 +1,5 @@
 #maincontent #contextbar {
-  background: @sharp-contexbar-bg;
+  background: @sharp-contexbar-bg; padding-right: 0;
   .navbar {
     margin-bottom: 0;
     .navbar-nav {
