tweak css (Chrome)

--- a/public/css/less/main.less
+++ b/public/css/less/main.less
@@ -8,7 +8,7 @@ body#sharp {
 
 body.sharp-cms {
   background: -moz-linear-gradient(left, @sharp-navcol-bg 160px, #eee 160px);
-  background: -webkit-gradient(linear, left top, right top, from(@sharp-navcol-bg), color-stop(160, @sharp-navcol-bg), color-stop(160, #eee));
+  background: -webkit-linear-gradient(left, @sharp-navcol-bg 160px, #eee 160px);
 
   font-family: 'Lato', Helvetica, Arial, sans-serif;
 
