--- a/public/css/less/loginview.less
+++ b/public/css/less/loginview.less
@@ -1,5 +1,6 @@
 .sharp-login {
   #login-form {
-    margin-top:60px;
+    h1 { font-family: 'Lato', Helvetica, Arial, sans-serif; font-weight: 100; color:#fff; text-align: center; font-size: 48px; margin-bottom:20px; }
+    margin-top:50px;
   }
 }
