--- a/public/css/less/formfields/field-list.less
+++ b/public/css/less/formfields/field-list.less
@@ -3,13 +3,14 @@
   .sharp-list {
     margin-bottom: 0;
     .sharp-list-item {
-      padding: 5px;
+      padding: 5px; list-style:none;
       .control-label { font-size: 14px; }
       .form-group { margin-bottom: 8px; }
       .sharp-list-remove {
-        padding:0; float: right; color:desaturate(@brand-danger, 50%);
+        float: right; color:desaturate(@brand-danger, 50%);
         &:hover { color:@brand-danger; }
       }
+      .sort-handle { cursor:pointer; color:@gray; }
     }
     .sharp-list-item-add:not(:first-child) {
       background: none; border:none;
@@ -18,6 +19,8 @@
       display: block; color:desaturate(@sharp-contexbar-bg, 50%);
       &:hover { color:@sharp-contexbar-bg; }
     }
+
+    .template { display: none; }
   }
 
   &.has-error .sharp-list { border:1px solid @state-danger-bg !important; }
