Fix tags in list + advanced search code base

--- a/public/css/less/main.less
+++ b/public/css/less/main.less
@@ -34,6 +34,7 @@ body.sharp-auth {
 @import "loginview.less";
 @import "listview.less";
 @import "formview.less";
+@import "advancedsearch.less";
 
 @import "formfields/field-markdown.less";
 @import "formfields/field-file.less";
