add embed and embedlist fields

--- a/public/css/less/contextbar.less
+++ b/public/css/less/contextbar.less
@@ -9,6 +9,9 @@
         font-size: 18px; line-height:normal; color:#fff; margin: 0; padding-top:14px; padding-bottom: 14px; border-left:1px solid #fff; background: transparent;
         &:active { background: darken(@sharp-contexbar-bg, 10%); }
       }
+      .navbar-btn-trail {
+        border:none; display: inline-block; padding:0; margin:15px 10px 15px 0; float:left;
+      }
       .navbar-form { margin-right: 0; }
       #search {
         max-width: 215px;
