--- a/public/css/less/main.less
+++ b/public/css/less/main.less
@@ -41,3 +41,4 @@ body.sharp-auth {
 @import "formfields/field-list.less";
 @import "formfields/field-date.less";
 @import "formfields/field-ref.less";
+@import "formfields/field-embed.less";
