--- a/public/css/less/main.less
+++ b/public/css/less/main.less
@@ -1,6 +1,10 @@
-@import "../../bower_components/bootstrap/less/variables.less";
-@import "../../bower_components/bootstrap/less/mixins.less";
+//@import "../../bower_components/bootstrap/less/variables.less";
+@import "../../bower_components/bootstrap/less/bootstrap.less";
+@import "../../bower_components/fontawesome/less/font-awesome.less";
+@import "bootstrap-variables.less";
 @import "theme.less";
+
+@fa-font-path: "../bower_components/fontawesome/fonts";
 
 body#sharp {
   .btn:active, .btn:focus {
