Tweak CSS & grunt watch

--- a/public/css/less/header.less
+++ b/public/css/less/header.less
@@ -11,6 +11,10 @@
         font-size: 36px;
         font-weight: 100;
         color:#fff;
+
+        &:hover, &:focus {
+          background: none;
+        }
       }
 
       .category {
