--- a/public/css/sharp.css
+++ b/public/css/sharp.css
@@ -8343,6 +8343,11 @@ body.sharp-form #sharpdelete button {
 .sharp-field-file .sharp-file .sharp-file-delete {
   display: none;
 }
+.sharp-field-file .sharp-file .sharp-file-image {
+  position: relative;
+  float: left;
+  overflow: hidden;
+}
 .sharp-field-file .sharp-file .sharp-file-thumbnail {
   display: none;
 }
@@ -8363,9 +8368,16 @@ body.sharp-form #sharpdelete button {
 .sharp-field-file .sharp-file.valuated .sharp-file-thumbnail {
   display: block;
 }
+.sharp-field-file .sharp-file.valuated .sharp-file-crop-mask {
+  position: absolute;
+  border: 1px solid #fff;
+  box-shadow: #000 0 0 5px;
+}
 .sharp-field-file .sharp-file.valuated .sharp-file-label {
   display: block;
   line-height: normal;
+  float: left;
+  margin-left: 5px;
 }
 .sharp-field-file .sharp-file.valuated .sharp-file-label .name {
   font-weight: bold;
@@ -8379,6 +8391,7 @@ body.sharp-form #sharpdelete button {
 .sharp-field-file .sharp-file.valuated .sharp-file-label .size {
   color: #888;
   font-size: 11px;
+  display: block;
 }
 .sharp-field-file .sharp-file.valuated .sharp-file-label .type {
   position: relative;
@@ -8401,6 +8414,80 @@ body.sharp-form #sharpdelete button {
 }
 .sharp-field-file.has-error .sharp-file {
   border-color: #f2dede !important;
+}
+.crop-img-glasspane {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  top: 0;
+  left: 0;
+  background: #000;
+  opacity: .6;
+  z-index: 9998;
+}
+.crop-img-wrapper {
+  display: none;
+  z-index: 9999;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 450px;
+  padding: 20px;
+  margin-left: -225px;
+  margin-top: -225px;
+  background: #fff;
+}
+.crop-img-wrapper img {
+  display: block;
+  margin: 20px auto;
+}
+.crop-img-wrapper a.btn {
+  float: right;
+}
+.crop-img-wrapper a.btn.btn-crop:hover {
+  color: #51a4aa;
+}
+.crop-img-wrapper a.btn.btn-cancel:hover {
+  color: red;
+}
+.crop-img-wrapper a.btn.btn-back:hover {
+  color: #000;
+}
+/*
+ * imgAreaSelect default style
+ */
+.imgareaselect-border1 {
+  background: url(border-v.gif) repeat-y left top;
+}
+.imgareaselect-border2 {
+  background: url(border-h.gif) repeat-x left top;
+}
+.imgareaselect-border3 {
+  background: url(border-v.gif) repeat-y right top;
+}
+.imgareaselect-border4 {
+  background: url(border-h.gif) repeat-x left bottom;
+}
+.imgareaselect-border1,
+.imgareaselect-border2,
+.imgareaselect-border3,
+.imgareaselect-border4 {
+  filter: alpha(opacity=50);
+  opacity: 0.5;
+}
+.imgareaselect-handle {
+  background-color: #fff;
+  border: solid 1px #000;
+  filter: alpha(opacity=50);
+  opacity: 0.5;
+}
+.imgareaselect-outer {
+  background-color: #000;
+  filter: alpha(opacity=50);
+  opacity: 0.5;
 }
 .sharp-field-list .sharp-list,
 .sharp-field-embed_list .sharp-list {
