Configure regulat L5 Service Provider

--- a/public/css/less/main.less
+++ b/public/css/less/main.less
@@ -4,7 +4,7 @@
 @import "bootstrap-variables.less";
 @import "theme.less";
 
-@fa-font-path: "../bower_components/fontawesome/fonts";
+@fa-font-path: "fonts/";
 
 body#sharp {
   .btn:active, .btn:focus {
