--- a/public/css/sharp.css
+++ b/public/css/sharp.css
@@ -2367,8 +2367,8 @@ input[type="button"].btn-block {
 }
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url('../bower_components/bootstrap/fonts/glyphicons-halflings-regular.eot');
-  src: url('../bower_components/bootstrap/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../bower_components/bootstrap/fonts/glyphicons-halflings-regular.woff') format('woff'), url('../bower_components/bootstrap/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../bower_components/bootstrap/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+  src: url('fonts/glyphicons-halflings-regular.eot');
+  src: url('fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('fonts/glyphicons-halflings-regular.woff') format('woff'), url('fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 .glyphicon {
   position: relative;
@@ -5782,8 +5782,8 @@ button.close {
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('../bower_components/fontawesome/fonts/fontawesome-webfont.eot?v=4.2.0');
-  src: url('../bower_components/fontawesome/fonts/fontawesome-webfont.eot?#iefix&v=4.2.0') format('embedded-opentype'), url('../bower_components/fontawesome/fonts/fontawesome-webfont.woff?v=4.2.0') format('woff'), url('../bower_components/fontawesome/fonts/fontawesome-webfont.ttf?v=4.2.0') format('truetype'), url('../bower_components/fontawesome/fonts/fontawesome-webfont.svg?v=4.2.0#fontawesomeregular') format('svg');
+  src: url('fonts//fontawesome-webfont.eot?v=4.2.0');
+  src: url('fonts//fontawesome-webfont.eot?#iefix&v=4.2.0') format('embedded-opentype'), url('fonts//fontawesome-webfont.woff?v=4.2.0') format('woff'), url('fonts//fontawesome-webfont.ttf?v=4.2.0') format('truetype'), url('fonts//fontawesome-webfont.svg?v=4.2.0#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
